2013-10-24  Niibe Yutaka  <gniibe@fsij.org>

	* src/main.c (usb_cb_setup): Signal CND_USB, so that
	neug_upgrade.py works better.

2013-08-22  Niibe Yutaka  <gniibe@fsij.org>

	* Version 0.11.

2013-08-21  Niibe Yutaka  <gniibe@fsij.org>

	* chopstx: Update to 0.00 release of Chopstx.

2013-08-20  Niibe Yutaka  <gniibe@fsij.org>

	* src/configure (options): Add --enable-sys1-compat.

2013-08-19  Niibe Yutaka  <gniibe@fsij.org>

	* src/sha256.h: Remove extern from function prototypes.

	* src/main.c (vcom_string3): Updated.
	[DFU_SUPPORT] (main): Fix calling flash_erase_all_and_exec.

	* src/neug.c (repetition_count_test_word)
	(adaptive_proportion_64_test_word)
	(adaptive_proportion_4096_test_word)
	(noise_source_continuous_test_word): New.
	(ep_fill_wbuf_v): Use noise_source_continuous_test_word.

2013-08-17  Niibe Yutaka  <gniibe@fsij.org>

	* src/main.c (main): Fix locking of USB_MTX.

	* src/adc_stm32f103.c (adc_wait_completion): Fix race condition.
	Clear (FLAGS & ~1) only, not all of possible interrupts.

2013-08-16  Niibe Yutaka  <gniibe@fsij.org>

	* src/main.c (bDeviceState, fsij_device_state, connected): Protect
	by USB_MTX.
	(usb_cb_ctrl_write_finish): Use USB_MTX to access protected vars.
	Update CONNECTED here.
	(vcom_port_data_setup): Check length.
	Don't update CONNECTED here.
	(usb_cb_setup): Use USB_MTX to access protected vars.
	(usb_cb_handle_event): Likewise.
	(main): Mutual exclusion by USB_MTX.

	* src/usb_lld.h (bDeviceState): Remove.

	* src/adc_stm32f103.c (NEUG_DMA_MODE): Merge NEUG_DMA_MODE_SAMPLE
	and NEUG_DMA_MODE_CRC32 which are same value now.
	(adc_start_conversion_internal): Remove.
	(adc_start_conversion): Remove MODE, it's not SIZE but COUNT now.

	* src/neug.c (ep_init, ep_process): Follow the change of
	adc_start_conversion.

	* chopstx: New version of Chopstx.

2013-08-13  Niibe Yutaka  <gniibe@fsij.org>

	* src/main.c (struct line_coding): Add packed attribute.
	(usb_cb_ctrl_write_finish): Wake up main thread if it wait